# product-review-hub

./: LICENSE  README.md  prd.md
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 3a3735d38ae2_auth_related_tables.py  53f00d8439db_add_review_delete_behaviour_on_product_.py  603e8cb4c9a0_add_name_field_to_users.py  998c0f14a6f6_add_product_and_review_tables.py
backend/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py  users.py  utils.py
backend/app/routers/: admin.py  products.py  reviews.py
backend/scripts/: seed_products.py
backend/tests/: conftest.py  test_admin.py  test_products.py  test_reviews.py
frontend/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/(auth)/: actions.ts
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/components/: FormError.tsx  SubmitButton.tsx  ThemedToaster.tsx
frontend/components/admin/: AddProductForm.tsx  ProductManagement.tsx  ReviewModeration.tsx
frontend/components/layout/: Footer.tsx  Navbar.tsx
frontend/components/products/: ProductCard.tsx  ProductCardSkeleton.tsx  ProductGrid.tsx
frontend/hooks/: useAdminProducts.ts  useAdminReviews.ts  useAuth.ts  useAuth.tsx  useMyReviews.ts  useProduct.ts  useProducts.ts  useTheme.tsx
frontend/lib/: api-config.ts  schemas.ts  utils.ts
frontend/scripts/: generate-client.js
frontend/tests/: setup.ts
(+28 files in other folders)
