[project]
name = "product-review-hub-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
]
